5-deploy-ingress/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prisma-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prisma-route
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - prisma-gateway
  http:
  - route:
    - destination:
        host: prisma-app-service.default.svc.cluster.local
        port:
          number: 80
